--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -40,6 +40,7 @@ dependencies:
   another_flushbar: ^1.12.30
   logger: ^2.2.0
   flutter_staggered_animations: ^1.1.1
+  hive: ^2.2.3
 
 dev_dependencies:
   flutter_test:
