--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -11,9 +11,7 @@ dependencies:
     sdk: flutter
 
   cupertino_icons: ^1.0.6
-  animated_text_kit: ^4.2.2
   provider: ^6.1.2
-  auto_size_text: ^3.0.0
   cached_network_image: ^3.3.1
   carousel_slider: ^4.2.1
   check_vpn_connection: ^0.0.2
@@ -41,6 +39,9 @@ dependencies:
   logger: ^2.2.0
   flutter_staggered_animations: ^1.1.1
   hive: ^2.2.3
+  hive_flutter: ^1.1.0
+  build_runner: ^2.4.9
+  hive_generator: ^2.0.1
 
 dev_dependencies:
   flutter_test:
