--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -42,6 +42,7 @@ dependencies:
   hive_flutter: ^1.1.0
   build_runner: ^2.4.9
   hive_generator: ^2.0.1
+  webview_flutter: ^4.8.0
 
 dev_dependencies:
   flutter_test:
