--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -43,6 +43,7 @@ dependencies:
   build_runner: ^2.4.9
   hive_generator: ^2.0.1
   webview_flutter: ^4.8.0
+  flutter_rating_bar: ^4.0.1
 
 dev_dependencies:
   flutter_test:
