--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -21,29 +21,25 @@ dependencies:
   image_picker: ^1.1.2
   internet_connection_checker: ^1.0.0+1
   loading_animation_widget: ^1.2.0+4
-  path: ^1.8.2
   path_provider: ^2.0.15
   persian_number_utility: ^1.1.3
   shared_preferences: ^2.1.1
   show_up_animation: ^2.0.0
-  simple_shadow: ^0.3.1
-  smooth_page_indicator: ^1.1.0
   email_validator: ^3.0.0
   easy_loading_button: ^0.3.2
   image_cropper: ^7.1.0
   persian_datetime_picker: ^2.6.0
-  flutter_svg: ^2.0.10+1
   jalali_table_calendar: ^1.3.3
   flutter_widget_from_html: ^0.15.0
-  another_flushbar: ^1.12.30
-  logger: ^2.2.0
   flutter_staggered_animations: ^1.1.1
   hive: ^2.2.3
   hive_flutter: ^1.1.0
-  build_runner: ^2.4.9
-  hive_generator: ^2.0.1
   webview_flutter: ^4.8.0
   flutter_rating_bar: ^4.0.1
+  simple_shadow: ^0.3.1
+  smooth_page_indicator: ^1.2.0+3
+  flutter_svg: ^2.0.10+1
+  path: ^1.9.0
 
 dev_dependencies:
   flutter_test:
